# pc_simulator_sdl_eclipse

./: .gitignore  CMakeLists.txt  gui.c  gui.h  hmi.c  hmi.h  lv_conf.h  lv_drv_conf.h  main.c  seg_font.c
